--- a/_posts/2025-02-11-step8up.md
+++ b/_posts/2025-02-11-step8up.md
@@ -2,7 +2,7 @@
 layout: post
 title: Template for Learners
 description: Editable template where you can add/amend your projects or posts.
-image: /posts/step8up-template.png
+image: LearnerPortfolio/posts/step8up-template.png
 tags:
   - python
   - HTML
@@ -41,7 +41,7 @@ tags:
 ### Results  {#overview-results}
 - 📊 **Charts and Graphs:** *(You can embed an image of a chart)*
   
-  ![Image of a bar chart](/img/posts/bar-chart-example.png)
+  ![Image of a bar chart](LearnerPortfolio/img/posts/bar-chart-example.png)
 
 - 📝 **Summary of Key Findings:**  
   - Bullet point 1  
@@ -73,7 +73,7 @@ tags:
   - [ ] Secondary data  
 
 - 📷 **Image Example:**  
-  ![Image of a example](/img/posts/step8up-template.png)
+  ![Image of a example](LearnerPortfolio/img/posts/step8up-template.png)
 
 ---
 
