--- a/_posts/2025-02-11-step8up.md
+++ b/_posts/2025-02-11-step8up.md
@@ -2,7 +2,7 @@
 layout: post
 title: Template for Learners
 description: Editable template where you can add/amend your projects or posts.
-image: /posts/step8up-template.png
+image: /posts/step8up-skeleton-template.png
 tags:
   - python
   - HTML
@@ -73,7 +73,7 @@ tags:
   - [ ] Secondary data  
 
 - 📷 **Image Example:**  
-  ![Image of a example](/img/posts/step8up-template.png)
+  ![Image of a example](/img/posts/step8up-skeleton-template.png)
 
 ---
 
