checking youtube link jekyll

--- a/_posts/2025-02-11-step8up.md
+++ b/_posts/2025-02-11-step8up.md
@@ -79,6 +79,8 @@ tags:
 
 ## 03. Findings & Insights  {#findings-insights}
 
+{% youtube "https://youtu.be/IZr-rhyYP44?si=obgnhjhKS_3Tgj1s" %}
+
 ```python
 # Example of a code snippet to showcase an algorithm
 def analyze_data(data):
