--- a/_posts/2025-02-11-step8up.md
+++ b/_posts/2025-02-11-step8up.md
@@ -9,6 +9,7 @@ tags:
   - Tag1
   - Tag2
   - Tag3
+youtubeId: sIJN5KKDwr4
 ---
 
 ## Table of Contents
@@ -79,7 +80,7 @@ tags:
 
 ## 03. Findings & Insights  {#findings-insights}
 
-{% youtube "https://youtu.be/IZr-rhyYP44?si=obgnhjhKS_3Tgj1s" %}
+{% include youtubePlayer.html id=page.youtubeId %}
 
 ```python
 # Example of a code snippet to showcase an algorithm
