added some desciption

--- a/_posts/2025-02-11-step8up.md
+++ b/_posts/2025-02-11-step8up.md
@@ -80,8 +80,9 @@ youtubeId: sIJN5KKDwr4
 
 ## 03. Findings & Insights  {#findings-insights}
 
+- 📌 **Video links:** *(You can embed a youtube video with its embed-ID) for example:*
 {% include youtubePlayer.html id=page.youtubeId %}
-
+<br>
 ```python
 # Example of a code snippet to showcase an algorithm
 def analyze_data(data):
