added youtube tutorial

--- a/_posts/2025-02-11-step8up.md
+++ b/_posts/2025-02-11-step8up.md
@@ -10,7 +10,11 @@ tags:
   - Tag2
   - Tag3
 youtubeId: sIJN5KKDwr4
+demoyoutubeId: u9PqyNTopfQ
 ---
+
+- 📌 **Youtube tutorial for creating the portfolio:** 
+{% include youtubePlayer.html id=page.demoyoutubeId %}
 
 ## Table of Contents
 
